fix s3 credentials and add node modules

--- a/public/test.html
+++ b/public/test.html
@@ -15,7 +15,7 @@
         function listAlbums() {
 
             var albumBucketName = 'amipaces';
-            var IdentityPoolId = 'us-west-2_wbohmpPCD';
+            var IdentityPoolId = 'us-west-2:3ddb9fdb-10b7-4f0a-b34b-f53afaab6464';
             var bucketRegion = 'us-west-2';
 
             AWS.config.update({
