--- a/public/test.html
+++ b/public/test.html
@@ -71,6 +71,10 @@
 <body>
 <h1>My S3 test App</h1>
 <div id="app"></div>
+<form method="post" action="upload" name="submit" enctype="multipart/form-data">
+<input type="file" name="fileField"><br /><br />
+<input type="submit" name="submit" value="Submit">
+</form>
 </body>
 </html>
 
