--- a/public/s3upload.html
+++ b/public/s3upload.html
@@ -1,5 +1,5 @@
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
 
 <html>
@@ -17,16 +17,16 @@
         var input = document.getElementById('image').value;
         var file = input.split("\\");
         var fileName = file[file.length-1];
-        alert(fileName)
+        alert(document.getElementById('image').files[0])
 
         $.get( "/getPresignedURL", { fileName: fileName }, function( dataURL ) {
-           
+           alert(dataURL)
             $.ajax({
                 type : 'PUT',
                 url : dataURL,
                 data : document.getElementById('image').files[0],
                 processData: false,  // tell jQuery not to convert to form data
-                contentType: document.getElementById('image').files[0].type,
+                contentType: document.getElementById('image').files[0].type,//might need be commented out
                 success: function(json) { console.log('Upload complete!') },
                 error: function (XMLHttpRequest, textStatus, errorThrown) {
                     console.log('Upload error: ' + XMLHttpRequest.responseText);
